--- a/数学基础.md
+++ b/数学基础.md
@@ -20,7 +20,7 @@ https://www.zhihu.com/question/30269898
 
 https://zhuanlan.zhihu.com/p/103854460
 
-![image-20210726101523978](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20210726101523978.png)
+![image-20210726101523978](数学基础.assets/image-20210726101523978.png)
 
 ![image-20210726101635882](数学基础.assets/image-20210726101635882.png)
 
